<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/ImageLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/AlbumArt"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerInParent="true"
                android:background="@drawable/albumart"
                android:contentDescription="@string/AlbumArt" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/Title"
            android:text="@string/Title" />

        <EditText
            android:id="@+id/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Title"
            android:inputType="text"
            style="@style/EditTextEditTextHolo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/Artist"
            android:text="@string/Artist" />

        <EditText
            android:id="@+id/Artist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Artist"
            android:inputType="text"
            style="@style/EditTextEditTextHolo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/Album"
            android:text="@string/Album" />

        <EditText
            android:id="@+id/Album"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Album"
            android:inputType="text"
            style="@style/EditTextEditTextHolo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/Lyrics"
            android:text="@string/Lyrics" />

        <EditText
            android:id="@+id/Lyrics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/Lyrics"
            android:inputType="textMultiLine"
            android:minHeight="200dp"
            style="@style/EditTextEditTextHolo" />
    </LinearLayout>

</ScrollView>